noinst_LTLIBRARIES = \
	libscreenshooter.la

libscreenshooter_la_SOURCES =	\
	$(libscreenshooter_built_sources) \
	libscreenshooter.h \
	screenshooter-actions.c screenshooter-actions.h \
	screenshooter-capture.c screenshooter-capture.h \
  screenshooter-dialogs.c screenshooter-dialogs.h \
	screenshooter-global.h \
	screenshooter-utils.c screenshooter-utils.h 

libscreenshooter_la_CFLAGS = \
	-I$(top_srcdir)	\
  @GTK_CFLAGS@ \
	@GLIB_CFLAGS@ \
	@LIBXFCE4UTIL_CFLAGS@ \
	@LIBXFCEGUI4_CFLAGS@ \
  -DPACKAGE_LOCALE_DIR=\"$(localedir)\"
	
libscreenshooter_la_LIBADD = \
  @GTK_LIBS@ \
	@LIBXFCE4UTIL_LIBS@ \
	@LIBXFCEGUI4_LIBS@ \
  @GLIB_LIBS@

if HAVE_XMLRPC
if HAVE_CURL

libscreenshooter_built_sources = \
	screenshooter-marshal.c screenshooter-marshal.h

libscreenshooter_la_SOURCES +=	\
	$(libscreenshooter_built_sources) \
  exo-job.c exo-job.h \
	exo-simple-job.c exo-simple-job.h \
	katze-throbber.c katze-throbber.h \
	screenshooter-job.c screenshooter-job.h \
	screenshooter-simple-job.c screenshooter-simple-job.h \
	screenshooter-zimagez.c screenshooter-zimagez.h \
  sexy-url-label.c sexy-url-label.h

libscreenshooter_la_CFLAGS += \
	$(XMLRPC_CFLAGS)

libscreenshooter_la_LIBADD += \
	$(XMLRPC_LIBS) -lxmlrpc_client

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##

DISTCLEANFILES =	\
	stamp-screenshooter-marshal.h \
	$(libscreenshooter_built_sources)

BUILT_SOURCES = \
	$(libscreenshooter_built_sources)

screenshooter-marshal.h: stamp-screenshooter-marshal.h
	@true
stamp-screenshooter-marshal.h: screenshooter-marshal.list Makefile
	( cd $(srcdir) && glib-genmarshal \
		--prefix=_screenshooter_marshal \
		--header screenshooter-marshal.list ) >> xgen-emh \
	&& ( cmp -s xgen-emh screenshooter-marshal.h || cp xgen-emh screenshooter-marshal.h ) \
	&& rm -f xgen-emh \
	&& echo timestamp > $(@F)

screenshooter-marshal.c: screenshooter-marshal.list Makefile
	cd $(srcdir) \
	&& echo "#include \"screenshooter-marshal.h\"" > xgen-emc \
	&& glib-genmarshal \
	--prefix=_screenshooter_marshal \
	--body screenshooter-marshal.list >> xgen-emc \
	&& cp xgen-emc screenshooter-marshal.c \
	&& rm -f xgen-emc

EXTRA_DIST = \
	screenshooter-marshal.list

endif
endif
